Fixed horizontal scrolling on mobile

--- a/src/app/components/contact/contact.component.scss
+++ b/src/app/components/contact/contact.component.scss
@@ -1,10 +1,10 @@
 .contact {
   max-width: 992px;
   //min-height: 100vh;
-  width: 100%;
+  //width: 100%;
   margin-left: auto;
   margin-right: auto;
-  padding: 50px;
+  padding: 50px 25px;
 }
 
 .contact-text {
@@ -91,7 +91,7 @@
 
 .message-panel {
   flex-basis: 50%;
-  padding: 0 20px;
+  //padding: 0 20px;
 }
 
 .message-form {
