--- a/src/app/components/project-list/project-list.component.scss
+++ b/src/app/components/project-list/project-list.component.scss
@@ -1,9 +1,9 @@
 .projects {
   max-width: 992px;
-  width: 100%;
+  //width: 100%;
   margin-left: auto;
   margin-right: auto;
-  padding: 50px;
+  padding: 50px 25px;
 }
 
 .project-text {
