--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,10 +7,13 @@
   box-sizing: border-box;
 }
 
+body, html {
+  overflow-x: hidden;
+}
+
 body {
   font-family: 'Montserrat', sans-serif;
   padding: 0;
-  overflow-x: hidden;
 }
 
 a {
